# coyotetm-gtk

./: .buildconfig  .gitignore  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  meson.build
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
build-aux/flatpak/: io.github.CoyoteTM.json  io.github.CoyoteTMRunTests.json  org.gnome.CoyoteTM.json~
src/: Makefile  Makefile.am  Makefile.in  coyotetm  ctm-app.c  ctm-app.h  ctm-application.c  ctm-db.c  ctm-db.h  ctm-event.c  ctm-event.h  ctm-main-window.c  ctm-main-window.h  ctm-main-window.ui  ctm-main.c  ctm-model.c  ctm-model.h  ctm-person-window.ui  ctm-person.c  ctm-person.h  ctm-project-window.ui  ctm-project.c  ctm-project.h  ctm-resource.c  ctm-resource.xml  ctm-task-window.c  ctm-task-window.h  ctm-task-window.ui  ctm-task.c  ctm-task.h  ctm-util.c  ctm-util.h  ctm-window.c  ctm-window.h  ctm-window.ui  meson.build  tags
src/.deps/: coyotetm-ctm-app.Po  coyotetm-ctm-application.Po  coyotetm-ctm-db.Po  coyotetm-ctm-event.Po  coyotetm-ctm-person.Po  coyotetm-ctm-project.Po  coyotetm-ctm-resource.Po  coyotetm-ctm-task.Po  coyotetm-ctm-window.Po  coyotetm-main.Po
